# plumba-plugins

./: Cargo.toml
shiki_plugin/: Cargo.toml
shiki_plugin/src/: lib.rs  model.rs  shiki_api.rs
src/: lib.rs  title_plugin.rs
