[package]
name = "plumba-plugins"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib", "rlib"]

[workspace]
members = ["shiki_plugin"]

[workspace.dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.120" }
async-trait = "0.1.80"

[dependencies]
dlopen = "0.1.6"
dlopen_derive = "0.1.3"
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true

[build]
rustflags = ["-C", "prefer-dynamic", "-C", "rpath"]
